[package]
name = "crm-api"
version = "0.1.0"
authors = ["amwo <tsushimori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.6.0"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
cookie = { version="0.12.0", features = ["percent-encode"]}

[dependencies.async-std]
version = "1.4.0"
features = ["attributes"]
